--- a/web/foot.jspf
+++ b/web/foot.jspf
@@ -39,7 +39,7 @@ org.opensolaris.opengrok.web.Prefix"
 
         %>
     <div id="footer">
-<p><a href="http://www.opensolaris.org/os/project/opengrok/"
+<p><a href="http://opengrok.github.com/OpenGrok/"
  title="Served by OpenGrok"><span id="fti"></span></a></p>
 <p>Indexes created <%= cfg.getEnv().getDateForLastIndexRun() %></p>
     <%= cfg.getEnv().getConfiguration().getFooterIncludeFileContent() %>
