--- a/web/menu.jspf
+++ b/web/menu.jspf
@@ -18,8 +18,7 @@ information: Portions Copyright [yyyy] [name of copyright owner]
 
 CDDL HEADER END
 
-Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
-Use is subject to license terms.
+Copyright (c) 2007, 2013, Oracle and/or its affiliates. All rights reserved.
 
 Portions Copyright 2011 Jens Elkner.
 
@@ -111,11 +110,11 @@ org.opensolaris.opengrok.web.Util"
                 <option value="">Any</option><%
                 for (Map.Entry<String, String> d : SearchHelper.getFileTypeDescirptions()) {
                     %>
-                <option value="<%= d.getKey() %>"<% 
+                <option value="<%= Util.formQuoteEscape(d.getKey()) %>"<%
                     if (d.getKey().equals(selection)) {
                         %> selected="selected"<%
                     }
-                    %>><%= Util.formQuoteEscape(d.getValue()) %></option><%
+                    %>><%= Util.htmlize(d.getValue()) %></option><%
                 }
             %>
             </select>
