--- a/web/offwhite/style.css
+++ b/web/offwhite/style.css
@@ -198,7 +198,7 @@ label {
 	margin-right: 0;
 }
 
-#home, #history, #download { /* menu item icons */
+#home, #history, #download, #raw { /* menu item icons */
 	display: inline-block;
 	width: 18px;
 	height: 18px;
@@ -216,7 +216,7 @@ label {
 	background-position: -18px 0;
 }
 
-#download { /* w.gif */
+#download, #raw { /* w.gif */
 	background-position: -36px 0;
 }
 
