add missing changes for non-default CSS for issue #573

--- a/web/polished/style.css
+++ b/web/polished/style.css
@@ -542,14 +542,20 @@ table#dirlist { /* the "Name" column */
 	background-position: -69px 0;
 }
 
-#dirlist td:nth-child(n+2) { /* all but the first column */
+#dirlist td:nth-child(n+3) { /* all but the first 2 columns */
 	padding-right: 1em;
 }
 
-#dirlist tbody td:nth-child(4) {
+#dirlist tbody td:nth-child(5) {
 	text-align: right; /* CSS3 may allow " " (single space char) */
 }
 
+#dirlist td.q { /* 2nd column: H A D */
+	white-space: nowrap;
+	font-size: small;
+	padding-left: 16px;
+	width: 3em;
+}
 
 /* file display */
 div[id^='src'] {
