--- a/web/default/style.css
+++ b/web/default/style.css
@@ -462,7 +462,9 @@ div[id^='src'] {
 }
 
 div[id^='src'] pre {
+	display: table-cell;
 	margin: 0;
+	position: relative;
 }
 
 div[id^='src'] .l-hide, #src .hl-hide, .blame-hidden { /* hidden line number/annotation block */
@@ -490,12 +492,6 @@ div[id^='src'] .l, div[id^='src'] .hl, .blame .r, .blame .a,
 
 div[id^='src'] .hl { /* highlighted line number */
 	color: #000;
-}
-
-/* highlight line number with anchor */
-div[id^='src'] a.l:target, div[id^='src'] a.hl:target {
-	background: orange;
-	color:yellow;
 }
 
 .blame .r { /* revision number "column" (annotation) */
@@ -675,3 +671,19 @@ a.xsr	{ /* subroutine */		color: #00f; font-weight: bold; }
 }
 /* ############### end of footer ############## */
 
+/* Line highlighting */
+.line-bg {
+	height: 15px;
+	left: 0;
+	position: absolute;
+	width: 100%;
+	z-index: -10;
+}
+
+.selected-line {
+	background-color: #ffeebe;
+}
+
+.l:focus, .hl:focus {
+	outline: none;
+}
