--- a/web/default/style.css
+++ b/web/default/style.css
@@ -465,6 +465,9 @@ div[id^='src'] pre {
 	display: table-cell;
 	margin: 0;
 	position: relative;
+	/* Hack to make the pre as wide as the screen. Width 100% or auto do not
+	 * work because of table-cell. */
+	width: 10000px;
 }
 
 div[id^='src'] .l-hide, #src .hl-hide, .blame-hidden { /* hidden line number/annotation block */
