scopes v2 improvements - new folding/unfolding icons, tunable in <theme>/style.css

--- a/web/default/style.css
+++ b/web/default/style.css
@@ -694,6 +694,8 @@ a.scope { /* scope */                   color: dodgerblue; font-weight: bold; pa
 }
 /* ############### end of footer ############## */
 
+/* *** scopes *** */
+
 div.scope-head {
     display: block;
 }
@@ -702,12 +704,24 @@ div.scope-body {
     display: block;
 }
 
-span.fold-icon {
-    border: 1px solid black;
-    margin-left: 0.5em;
-    margin-right: 0.5em;
+img.unfold-icon {
+    margin-left: 0.2em;
+    margin-right: 0.2em;
+    content: url('./img/unfolding.png');
+}
+
+img.fold-icon {
+    margin-left: 0.2em;
+    margin-right: 0.2em;
+    content: url('./img/folding.png');
 }
 
 span.scope-signature {
     display: none;
+}
+
+div#scope {
+    width: 100%;
+    min-height: 1em;
+    text-align: center;
 }
