--- a/web/polished/style.css
+++ b/web/polished/style.css
@@ -782,11 +782,11 @@ a.scope { /* scope */                   color: dodgerblue; font-weight: bold; pa
 
 /* *** scopes *** */
 
-div.scope-head {
+span.scope-head {
     display: block;
 }
 
-div.scope-body {
+span.scope-body {
     display: block;
 }
 
@@ -806,6 +806,14 @@ span.fold-icon {
     width: 11px;
     height: 11px;
     display: inline-block;
+}
+
+span.fold-space {
+    margin-left: 0.2em;
+    margin-right: 0.2em;
+    width: 11px;
+    height: 11px;
+    display: inline-block;    
 }
 
 span.scope-signature {
