--- a/web/httpheader.jspf
+++ b/web/httpheader.jspf
@@ -18,9 +18,7 @@ information: Portions Copyright [yyyy] [name of copyright owner]
 
 CDDL HEADER END
 
-Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
-Use is subject to license terms.
-
+Copyright (c) 2007, 2015, Oracle and/or its affiliates. All rights reserved.
 Portions Copyright 2011 Jens Elkner.
 
 --%><%--
@@ -81,11 +79,74 @@ if (cfg.getPrefix().equals(Prefix.HIST_L)) {
     title="OpenGrok Search for current project(s)" />
 <script type="text/javascript" src="<%=ctxPath%>/jquery-1.4.4.min.js"></script>
 <script type="text/javascript" src="<%=ctxPath%>/jquery.tooltip-1.3.pack.js"></script>
+<script type="text/javascript" src="<%=ctxPath%>/jquery.tablesorter-2.0.5b.js"></script>
 <%--<script type="text/javascript" src="<%=ctxPath%>/jquery.autocomplete-1.1.pack.js"></script> --%>
 <script type="text/javascript" src="<%=ctxPath%>/utils.js"></script>
 <title><%=cfg.getTitle()%></title><%
     out.write(cfg.getHeaderData());
 %>
+<script type="text/javascript">
+$.tablesorter.addParser({
+        id: 'dates',
+        is: function(s) { 
+            // return false so this parser is not auto detected
+            return false; 
+        }, 
+        format: function(s) {
+            var date = s.match(/^(\d{2})\-(\w{3})\-(\d{4})$/);
+            var d = date[1];
+            var m = date[2];
+            var y = date[3];
+            return new Date(m + ' ' + d + ' ' + y);
+        },
+        type: 'date'
+    }); 
+
+$.tablesorter.addParser({
+        id: 'groksizes',
+        is: function(s) {
+            // return false so this parser is not auto detected
+            return false;
+        },
+        format: function(s) {
+            var parts = s.match(/^([\d\.]+) (\w*)$/);
+            var num = parts[1];
+            var unit = parts[2];
+
+            // convert to bytes
+            if (unit == "KiB") {
+                return (num * 1024);
+            } else if (unit == "MiB") {
+                return (num * 1024 * 1024);
+            } else if (unit == "GiB") {
+                return (num * 1024 * 1024 * 1024);
+            } else {
+                return (num);
+            }
+        },
+        type: 'numeric'
+    });
+
+$(document).ready(function()
+    {
+        $("#dirlist").tablesorter({
+            sortList: [[0,0]],
+            cancelSelection: true,
+            headers: {
+                1: {
+                    sorter:'text'
+                },
+                3: {
+                    sorter:'dates'
+                },
+                4: {
+                    sorter:'groksizes'
+                }
+            }
+        });
+    }
+);
+</script>
 </head><%
 }
 /* ---------------------- httpheader.jsp end --------------------- */
