--- a/web/default/style.css
+++ b/web/default/style.css
@@ -1,9 +1,18 @@
 /* common stuff */
+html, body {
+	box-sizing:border-box;
+	height: 100%;
+	height: 100vh;
+}
 body {
 	background-color: #ffffff;
 	color: black;
 	font-family: sans-serif;
-	margin: 1ex 1ex 0 1ex;
+	margin: 0;
+	padding: 1ex 1ex 0 1ex;
+	height: -webkit-calc(100vh - 1ex);
+	height: -moz-calc(100vh - 1ex);
+	height: calc(100vh - 1ex);
 }
 
 a {
@@ -84,7 +93,16 @@ label {
 }
 
 /* ############### start of header ############## */
-#whole_header { }
+#whole_header {
+	position: fixed;
+	background: #fff;
+	z-index: 2;
+	height: 11ex;
+	width: 100%;
+	width: -webkit-calc(100vw - 2ex);
+	width: -moz-calc(100vw - 2ex);
+	width: calc(100vw - 2ex);
+}
 
 /* *** banner/deco above navbar *** */
 #header { }
@@ -249,11 +267,14 @@ input.submit { /* start search button , clear button */
 
 /* ############### start of content ############## */
 #content {
-	position: fixed;
-	left: 0;
-	right: 0;
-	overflow: auto;
-	padding: 1ex; /* should be the same as body's margin */
+	position: relative;
+	top:11ex;
+}
+
+#src {
+	height: -webkit-calc(100vh - 21ex);
+	height: -moz-calc(100vh - 21ex);
+	height: calc(100vh - 21ex);	
 }
 
 
@@ -676,6 +697,13 @@ a.scope { /* scope */                   color: dodgerblue; font-weight: bold; pa
 	color: #777777;
 	font-size: small;
 	margin: 1ex 0;
+	height: 10ex;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	width: -webkit-calc(100vw - 2ex);
+	width: -moz-calc(100vw - 2ex);
+	width: calc(100vw - 2ex);
 }
 
 #footer p { /* footer text */
