--- a/web/offwhite/style.css
+++ b/web/offwhite/style.css
@@ -1,9 +1,20 @@
 /* common stuff */
+html, body {
+	box-sizing:border-box;
+	height: 100%;
+	height: 100vh;
+}
+
 body {
 	background-color: #ededd5;
 	color: black;
 	font-family: sans-serif;
-	margin: 1ex 1ex 0 1ex;
+	margin: 0;
+	padding: 1ex 1ex 0 1ex;
+	height: 100%;
+	height: -webkit-calc(100vh - 1ex);
+	height: -moz-calc(100vh - 1ex);
+	height: calc(100vh - 1ex);
 }
 
 a {
@@ -65,7 +76,9 @@ label {
 	margin: 0;
 }
 
-#page { }
+#page {
+	height: 100%;
+}
 
 .error { /* error messages */
 	color: #a52a2a;
@@ -77,7 +90,16 @@ label {
 }
 
 /* ############### start of header ############## */
-#whole_header { }
+#whole_header {
+	position:fixed;
+	background: #ededd5;
+	z-index: 2;
+	height: 11ex;
+	width: 100%;
+	width: -webkit-calc(100vw - 2ex);
+	width: -moz-calc(100vw - 2ex);
+	width: calc(100vw - 2ex);
+}
 
 /* *** banner/deco above navbar *** */
 #header { }
@@ -275,13 +297,17 @@ input.submit { /* start search button */
 
 /* ############### start of content ############## */
 #content {
-	position: fixed;
-	left: 0;
-	right: 0;
-	overflow: auto;
-	padding: 1ex; /* should be the same as body's margin */
+	position: relative;
+	top: 11ex; /* same height as whole header */
 }
 
+#src {
+	height: 100%;
+	/* 100% - height of whole_header - height of footer */
+	height: -webkit-calc(100vh - 21ex);
+	height: -moz-calc(100vh - 21ex);
+	height: calc(100vh - 21ex);
+}
 
 /* *** help page *** */
 #help dfn { /* definitions */
@@ -678,6 +704,13 @@ a.scope { /* scope */                   color: dodgerblue; font-weight: bold; pa
 	font-size: small;
 	margin: 1ex 0;
 	border-top: 1px solid #bba;
+	height: 10ex;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	width: -webkit-calc(100vw - 2ex);
+	width: -moz-calc(100vw - 2ex);
+	width: calc(100vw - 2ex);
 }
 
 #footer p { /* footer text */
