--- a/web/offwhite/style.css
+++ b/web/offwhite/style.css
@@ -1,20 +1,9 @@
 /* common stuff */
-html, body {
-	box-sizing:border-box;
-	height: 100%;
-	height: 100vh;
-}
-
 body {
 	background-color: #ededd5;
 	color: black;
 	font-family: sans-serif;
-	margin: 0;
-	padding: 1ex 1ex 0 1ex;
-	height: 100%;
-	height: -webkit-calc(100vh - 1ex);
-	height: -moz-calc(100vh - 1ex);
-	height: calc(100vh - 1ex);
+	margin: 1ex 1ex 0 1ex;
 }
 
 a {
@@ -93,16 +82,7 @@ label {
 }
 
 /* ############### start of header ############## */
-#whole_header {
-	position:fixed;
-	background: #ededd5;
-	z-index: 2;
-	height: 11ex;
-	width: 100%;
-	width: -webkit-calc(100vw - 2ex);
-	width: -moz-calc(100vw - 2ex);
-	width: calc(100vw - 2ex);
-}
+#whole_header { }
 
 /* *** banner/deco above navbar *** */
 #header { }
@@ -300,17 +280,13 @@ input.submit { /* start search button */
 
 /* ############### start of content ############## */
 #content {
-	position: relative;
-	top: 11ex; /* same height as whole header */
+	position: fixed;
+	left: 0;
+	right: 0;
+	overflow: auto;
+	padding: 1ex; /* should be the same as body's margin */
 }
 
-#src {
-	height: 100%;
-	/* 100% - height of whole_header - height of footer */
-	height: -webkit-calc(100vh - 21ex);
-	height: -moz-calc(100vh - 21ex);
-	height: calc(100vh - 21ex);
-}
 
 /* *** help page *** */
 #help dfn { /* definitions */
@@ -707,13 +683,6 @@ a.scope { /* scope */                   color: dodgerblue; font-weight: bold; pa
 	font-size: small;
 	margin: 1ex 0;
 	border-top: 1px solid #bba;
-	height: 10ex;
-	position: fixed;
-	bottom: 0;
-	width: 100%;
-	width: -webkit-calc(100vw - 2ex);
-	width: -moz-calc(100vw - 2ex);
-	width: calc(100vw - 2ex);
 }
 
 #footer p { /* footer text */
