Fix for OpenGrok issue https://github.com/OpenGrok/OpenGrok/issues/1031 Adding word break support for Firefox and Internet Explorer.

--- a/web/default/style.css
+++ b/web/default/style.css
@@ -370,6 +370,12 @@ table#revisions tbody tr td p {
 	hyphens: auto;
 }
 
+@-moz-document url-prefix() {
+    table#revisions tbody tr td p {
+        word-break: break-all;
+    }
+}
+
 .rssbadge { /* RSS/XML Feed on history page */
 	text-align: right;
 	margin: 1ex 0;
